# simple

./: CMakeLists.txt  Dockerfile
h/: hello.hpp
src/: hello.cpp  main.cpp
